2008-08-12  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Make sure we use the border width is set to
	1 by default, as used in the code, spotted by Dylan McCall
	(Closes: #544089)

2008-08-08  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add application/smil+xml as used at
	http://www.cartalk.com/Radio/Show/online.html

2008-08-07  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: David Schleef <ds@schleef.org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	  (bacon_video_widget_get_video_property),
	  (bacon_video_widget_set_video_property)::
	  Fix rounding errors when converting colorbalance values to/from
	  a different value range. Should fix drift in colour balance.
	  (Closes: #545566, #537889)

2008-07-30  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem-lirc.c (impl_activate): Also fail to load
	if we're missing a data file

2008-07-30  Bastien Nocera  <hadess@hadess.net>

	* data/lirc_example:
	* src/plugins/lirc/Makefile.am:
	* src/plugins/lirc/totem-lirc.c (impl_activate):
	* src/plugins/lirc/totem_lirc_default: Update lirc plugin
	to read from a default configuration file, and not fail when there's
	no user configuration. This allows Totem to work out-of-the-box on the
	majority of remotes as setup by gnome-lirc-properties

2008-07-30  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plugins/pythonconsole/Makefile.am:
	* src/plugins/pythonconsole/console.py:
	* src/plugins/pythonconsole/pythonconsole.py:
	* src/plugins/pythonconsole/pythonconsole.totem-plugin.in:
	* totem.spec.in: Patch from Andrés de Barbará <adebarbara@gmail.com>
	to add a Python console to Totem (Closes: #542470)

2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/totem-dvb-setup.c (totem_dvb_setup_helper),
	(child_watch_func), (totem_dvb_setup_device):
	* src/totem-dvb-setup.h:
	* src/totem.c (totem_dvb_setup_result), (totem_action_load_media):